build_err.txt
ninja: Entering directory `out/build/gcc-14_2_build-release'
[1/3] C:\PROGRA~2\Arm\GNUTOO~1\bin\AR19DD~1.EXE -DSTM32H573xx -DSTM32_THREAD_SAFE_STRATEGY=4 -DUSE_HAL_DRIVER -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Core/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/STM32H5xx_HAL_Driver/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/CMSIS/Device/ST/STM32H5xx/Include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/CMSIS/Include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Core/ThreadSafe -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/FreeRTOS/Source/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/CMSIS/RTOS2/Include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/u8g2_csrc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/u8g2_cppsrc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../m1_csrc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Infrared/irmp-irsnd -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../FatFs/R015 -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Sub_Ghz -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Sub_Ghz/protocols -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/port -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/app/common -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/private_include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/build/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/esp_common/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/esp_driver_spi/include/driver -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/hal/include/hal -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/log/include/hal -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/soc/esp32c6/include/soc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/soc/esp32c6/register/soc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/examples/at_spi_master/spi/stm32/main -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/BSP/Components/ST25R3916 -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/Middlewares/ST/rfal/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/Middlewares/ST/rfal/Src -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/NFC_drv -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/NFC_drv/common -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/NFC_drv/legacy -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Battery -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../lfrfid -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CDC/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CDC/Scr -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CompositeBuilder/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CompositeBuilder/Src -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/MSC/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/MSC/Src -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Core/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Core/Scr -mcpu=cortex-m33 -mfpu=fpv5-sp-d16 -mfloat-abi=hard  -Wall -Wextra -Wpedantic -fdata-sections -ffunction-sections -Os -g0 -O3 -DNDEBUG -std=gnu11 -Werror -MD -MT cmake/m1_01/CMakeFiles/m1_core.dir/__/__/m1_csrc/m1_fw_update_bl.c.obj -MF cmake\m1_01\CMakeFiles\m1_core.dir\__\__\m1_csrc\m1_fw_update_bl.c.obj.d -o cmake/m1_01/CMakeFiles/m1_core.dir/__/__/m1_csrc/m1_fw_update_bl.c.obj -c C:/Users/chris/M1-ChrisUFO/m1_csrc/m1_fw_update_bl.c
FAILED: [code=1] cmake/m1_01/CMakeFiles/m1_core.dir/__/__/m1_csrc/m1_fw_update_bl.c.obj 
C:\PROGRA~2\Arm\GNUTOO~1\bin\AR19DD~1.EXE -DSTM32H573xx -DSTM32_THREAD_SAFE_STRATEGY=4 -DUSE_HAL_DRIVER -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Core/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/STM32H5xx_HAL_Driver/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/CMSIS/Device/ST/STM32H5xx/Include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/CMSIS/Include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Core/ThreadSafe -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/FreeRTOS/Source/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Middlewares/Third_Party/CMSIS/RTOS2/Include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/u8g2_csrc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/u8g2_cppsrc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../m1_csrc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Infrared/irmp-irsnd -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../FatFs/R015 -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Sub_Ghz -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Sub_Ghz/protocols -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/port -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/app/common -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp32_serial_flasher/private_include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/build/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/esp_common/include -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/esp_driver_spi/include/driver -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/hal/include/hal -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/log/include/hal -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/soc/esp32c6/include/soc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/esp-idf/components/soc/esp32c6/register/soc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Esp_spi_at/examples/at_spi_master/spi/stm32/main -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Drivers/BSP/Components/ST25R3916 -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/Middlewares/ST/rfal/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/Middlewares/ST/rfal/Src -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/NFC_drv -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/NFC_drv/common -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../NFC/NFC_drv/legacy -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../Battery -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../lfrfid -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CDC/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CDC/Scr -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CompositeBuilder/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/CompositeBuilder/Src -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/MSC/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Class/MSC/Src -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Core/Inc -IC:/Users/chris/M1-ChrisUFO/cmake/m1_01/../../USB/Core/Scr -mcpu=cortex-m33 -mfpu=fpv5-sp-d16 -mfloat-abi=hard  -Wall -Wextra -Wpedantic -fdata-sections -ffunction-sections -Os -g0 -O3 -DNDEBUG -std=gnu11 -Werror -MD -MT cmake/m1_01/CMakeFiles/m1_core.dir/__/__/m1_csrc/m1_fw_update_bl.c.obj -MF cmake\m1_01\CMakeFiles\m1_core.dir\__\__\m1_csrc\m1_fw_update_bl.c.obj.d -o cmake/m1_01/CMakeFiles/m1_core.dir/__/__/m1_csrc/m1_fw_update_bl.c.obj -c C:/Users/chris/M1-ChrisUFO/m1_csrc/m1_fw_update_bl.c
C:/Users/chris/M1-ChrisUFO/m1_csrc/m1_fw_update_bl.c: In function 'boot_recovery_check':
C:/Users/chris/M1-ChrisUFO/m1_csrc/m1_fw_update_bl.c:738:3: error: implicit declaration of function '__HAL_RCC_PWR_CLK_ENABLE' [-Wimplicit-function-declaration]
  738 |   __HAL_RCC_PWR_CLK_ENABLE();
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/chris/M1-ChrisUFO/m1_csrc/m1_fw_update_bl.c:777:15: error: 'FLASH_TypeDef' has no member named 'SR'
  777 |   while (FLASH->SR & FLASH_SR_BSY) {
      |               ^~
ninja: build stopped: subcommand failed.
